[workspace]
resolver = "2"
members = [
    "crates/*",
    "examples/*"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Tyson Lupul <tyson@radroots.org>"]
readme = "README.md"
repository = "https://github.com/triesap/leptos_maplibre"
rust-version = "1.92.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
js-sys = "0.3.77"
leptos = { version = "0.8.16", default-features = false }
send_wrapper = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "=0.2.108"
web-sys = { version = "0.3.77", features = [
    "Document",
    "Element",
    "HtmlDivElement",
    "HtmlElement",
    "Window",
    "console"
] }
leptos_maplibre = { version = "0.1.0", path = "crates/leptos_maplibre" }
leptos_maplibre_ui = { version = "0.1.0", path = "crates/leptos_maplibre_ui" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[profile.wasm-release]
inherits = "release"
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
