[package]
name = "leptos_maplibre"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "MapLibre GL JS bindings for Leptos."
keywords = ["leptos", "maplibre", "maps", "wasm", "web"]
categories = ["web-programming", "wasm"]

[lib]
path = "src/lib.rs"

[dependencies]
leptos = { workspace = true, features = ["csr"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
send_wrapper = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }

[lints]
workspace = true
