[package]
name = "leptos_maplibre_ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "Optional UI primitives for leptos_maplibre."
keywords = ["leptos", "maplibre", "maps", "wasm", "web"]
categories = ["web-programming", "wasm"]

[lib]
path = "src/lib.rs"

[dependencies]
leptos = { workspace = true, features = ["csr"] }
leptos_maplibre = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
send_wrapper = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }

[lints]
workspace = true
